--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vincie Studios - Premium Software and content manangement team</title>
+    <title>Vincie Studios - Premium Software and content management team</title>
     <meta name="description" content="Professional software development team creating stunning digital experiences that convert. Expert software development, UI/UX design, and digital solutions." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
